css/styles.css
/* ... */
.work-card-img {
    height: 100%;
    width: 100%;
    background-color: var(--font-main);
    border-radius: 2px;
}

.single-page-website {
    background: url('../img/singlepagewebsite.png') no-repeat center center/cover;
}

.tic-tac-toe {
    background: url('../img/tictactoe.png') no-repeat center center/cover;
}

.admin-dashboard {
    background: url('../img/admindashboard.png') no-repeat center center/cover;
}

.calculator {
    background: url('../img/Calculator.png') no-repeat center center/cover;
}

.book-library-app {
    background: url('../img/booklibraryapp.png') no-repeat center center/cover;
}

.equalizer-landing-page {
    background: url('../img/equilizerlandpage.png') no-repeat center center/cover;
}

.etchasketch {
    background: url('../img/etchasketch.png') no-repeat center center/cover;
}

.odinlandingpage {
    background: url('../img/odinlandingpage.png') no-repeat left center/cover;
}

.rockpaperscissors {
    background: url('../img/rockpaperscissors.png') no-repeat center center/cover;
}

.portfolioV1 {
    background: url('../img/portfolioV1.png') no-repeat center center/cover;
}

.googlehomepage {
    background: url('../img/googlehomepage.png') no-repeat center center/cover;
}

.work-card-text {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: var(--font-main);
}

.work-card-text .header {
    font-size: 20px;
    font-weight: 500;
    margin: 15px;
}

.work-card-text .work-card-main {
    font-size: 16px;
    margin: 15px;
}

.work-card-text .work-card-minor {
    font-size: 12px;
}

.work-card-text .footer {
    font-size: 12px;
    margin: 15px;
    display: flex;
    justify-content: flex-end;
}

.work-card-text .footer a {
    text-decoration: none;
    transition: ease-in 0.3s;
    text-decoration: none;
    color: var(--primary-darkest);
}

.work-card-text .footer a:hover {
    text-decoration: underline;
    color: var(--font-quaternary);
}

/* CONTACT SECTION */
.contact {
    background-color: #292929;
}

section#contact h1 {
    color: var(--font-main);
}

.contact h2 {
    color: var(--font-main);
}

.contact-link {
    text-decoration: none;
    font-weight: 600;
    color: var(--font-main);
    font-size: 16px;
}

.contact-link:hover {
    text-decoration: underline;
    color: var(--font-secondary);
}

/* RESUME SECTION */

.resume-link {
    text-decoration: none;
    font-weight: 600;
    color: var(--font-quaternary);
    font-size: 16px;
}

.resume-link:hover {
    text-decoration: underline;
    color: var(--font-tertiary);
}

.resume-link:visited {
    text-decoration: none;
    color: var(--font-tertiary);
}

.resume ion-icon {
    margin-top: 50px;
    font-size: 50px;
    color: var(--font-quaternary);
    transition: all 0.3s ease-in-out;
}

.resume ion-icon:hover {
    color: var(--font-tertiary);
    transform: scale(1.5);
}

.resume p {
    font-size: 14px;
    font-weight: 500;
    margin: 0;
}

.page-top-text {
    opacity: 0;
    transition: all 0.3s ease-in-out;
}

/* FOOTER SECTION */

footer {
    position: fixed;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 60px;
    width: 100%;
    font-size: 12px;
    background-color: var(--primary);
    z-index: 2;
}

footer ul {
    list-style-type: none;
    display: flex;
}

.built-by {
    padding: 5px;
}

.socials li {
    padding: 0 10px;
    font-size: 24px;
}

footer ion-icon {
    color: var(--font-quaternary);
    transition: all 0.3s ease-in-out;
}

footer ion-icon:hover {
    color: var(--font-tertiary);
    transform: scale(1.2);
}

/* MEDIA QUERIES */

@media screen and (max-width: 1536) {
    h1 {
        font-size: 40px;
        margin-bottom: 10px;
    }
    
    h2 {
        font-size: 20px;
        margin-bottom: 10px;
    }

    .skills-cards {
        width: 40%;
    }
    .work-cards {
        width: 85%;
    }

    .work-card {
        width: 250px;
        height: 200px;
        margin: 10px 20px;
    }

    .work-card-text {
        width: 100%;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 10px;
    }
    
    .work-card-text .work-card-main {
        font-size: 16px;
        margin: 10px;
    }
    
    .work-card-text .work-card-minor {
        font-size: 10px;
    }
    
    .work-card-text .footer {
        font-size: 12px;
        margin: 10px;


    }

}

@media screen and (max-width: 1366px) {
    h1 {
        font-size: 40px;
        margin-bottom: 15px;
    }
    
    h2 {
        font-size: 20px;
        margin-bottom: 15px;
    }

    .skills-cards {
        width: 50%;
    }

    .about-content {
        width: 50%;
    }
    
    .about-content p {
        margin: 15px 0;
    }

    .work-cards {
        width: 90%;
    }

    .work-card {
        width: 250px;
        height: 200px;
        margin: 10px;
    }

    .work-card-text .header {
        font-size: 18px;
        margin: 10px;
    }
    
    .work-card-text .work-card-main {
        font-size: 16px;
        margin: 10px;
    }
    
    .work-card-text .work-card-minor {
        font-size: 10px;
    }
    
    .work-card-text .footer {
        font-size: 12px;
        margin: 10px;


    }
}
/* ... */

